[package]
name = "farmgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
base64 = "0.20.0"
chrono = { version = "0.4.23", features = ["std"] }
dotenvy = "0.15.6"
comrak = "0.15.0"
bbscope = "0.1.4"
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
secrecy = {version = "0.8.0", features = ["alloc"] }
rocket-session-store = { version = "0.2.1", features = ["redis"], git="https://github.com/Aurora2500/rocket-session-store.git" }
tokio = { version = "1.23.0", features = ["full"] }
tokio-postgres = "0.7.7"
postgres-types = { version = "0.2.4", features = ["derive"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_postgres"] }
